--- a/울랄라.md
+++ b/울랄라.md
@@ -1,2 +1,1 @@
-[![Video link](https://youtu.be/SstQ0FuKRik?si=WpqHeO2oywrwKG8d)
-[![Video link](https://img.youtube.com/vi/cQVTU4krsrQ/0.jpg)](https://youtu.be/SstQ0FuKRik?si=WpqHeO2oywrwKG8d)
+[![Video link](https://i.ytimg.com/vi/SstQ0FuKRik/maxresdefault.jpg)](https://youtu.be/SstQ0FuKRik?si=WpqHeO2oywrwKG8d)
