Colab을 통해 생성됨

--- a/Input_Output_Index_Function.ipynb
+++ b/Input_Output_Index_Function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLi/8LsDtx/L7k9m/U0WPT",
+      "authorship_tag": "ABX9TyN2NNrqmPjYJuiMuQ9/je8K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "outputId": "b61f12c2-f7b3-445c-b1d8-0d63a3fb5a3b",
         "cellView": "form"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "id": "gpejreMbtokw",
         "outputId": "b203d47c-df52-4f9a-de36-81072e1d16a2"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "id": "9mRlCm4Cug8o",
         "outputId": "1d066514-f9e0-493b-ce45-db3c5097f4ae"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,6 +169,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "index에 대해 더 많은 정보를 알고 싶다면\n",
+        "[click here](https://colab.research.google.com/github/MK316/Spring2024/blob/main/DLEE/DLW04.ipynb#scrollTo=lsimZTSWo3GO)"
+      ],
+      "metadata": {
+        "id": "0UCk-6R_ybDg"
+      }
     },
     {
       "cell_type": "code",
@@ -190,7 +200,7 @@
         "id": "4H0uW96rv4D4",
         "outputId": "a1a1a393-65dc-4d6f-c934-93b38ce1b4f0"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,7 +229,7 @@
         "id": "eLZOteDHwOuA",
         "outputId": "23600ebe-c1f1-49e4-968e-d421f69c2ea7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
